[workspace]
members = [
    "tree_hash",
    "tree_hash_derive",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[patch.crates-io]
ethereum_ssz = { path = "../ethereum_ssz/ssz" }
