[workspace]
members = [
    "tree_hash",
    "tree_hash_derive",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

# TODO: Remove once ethereum_ssz is published.
[patch.crates-io]
ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", branch = "progressive" }
