[package]
name = "tree_hash"
version = "0.11.0"
edition = "2021"
description = "Efficient Merkle-hashing as used in Ethereum consensus"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/tree_hash"
documentation = "https://docs.rs/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
alloy-primitives = "1.0.0"
ethereum_hashing = { version = "0.8.0", default-features = false, features = ["zero_hash_cache"]  }
ethereum_ssz = "0.9.1"
smallvec = "1.6.1"
typenum = "1.12.0"

[dev-dependencies]
rand = "0.8.5"
tree_hash_derive = { path = "../tree_hash_derive", version = "0.11.0" }
ethereum_ssz_derive = "0.9.0"

[features]
default = ["ring"]
arbitrary = ["alloy-primitives/arbitrary"]
ring = ["ethereum_hashing/ring"]
