[package]
name = "tree_hash"
description = "Efficient Merkle-hashing as used in Ethereum consensus"
documentation = "https://docs.rs/tree_hash"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-primitives = "1.0.0"
ethereum_hashing = { version = "0.8.0", default-features = false, features = ["zero_hash_cache"]  }
ethereum_ssz = "0.10.0"
smallvec = "1.6.1"
typenum = "1.12.0"

[dev-dependencies]
rand = "0.9"
tree_hash_derive = { path = "../tree_hash_derive" }
ethereum_ssz_derive = "0.10"

[features]
default = ["ring"]
arbitrary = ["alloy-primitives/arbitrary"]
ring = ["ethereum_hashing/ring"]
