[package]
name = "tree_hash_derive"
version = "0.9.0"
edition = "2021"
description = "Procedural derive macros to accompany the tree_hash crate"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/tree_hash"
documentation = "https://docs.rs/tree_hash_derive"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.69"
proc-macro2 = "1.0.23"
quote = "1.0.18"
darling = "0.20.9"
