[package]
name = "tree_hash_derive"
description = "Procedural derive macros to accompany the tree_hash crate"
documentation = "https://docs.rs/tree_hash_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
darling = "0.23"
